Do not discard pending entry for old download manager.

Pending entry should only be discarded for new download manager or for
passkit download. Old download manager is fullscreen and omnibox has to
show download URL, instead of web view URL.

Bug: 802880
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: Ie2d00d9b29e91a315d846262da2298e23e57ac53
Reviewed-on: https://chromium-review.googlesource.com/871041
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Commit-Queue: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#530541}
Former-commit-id: 26ecbe37fa333e90efd089fda186bfd7f8051f03